--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
                     Capture your moments so that they always stay with you
                 </p>
             </div>
-            <div class="card">
+            <div class="card card3">
                 <img src="img/image_1.svg" alt="image">
                 <h4>Retouch</h4>
                 <p class="skill__text_card">
                     I strive to make photography surpass reality
                 </p>
             </div>
-            <div class="card">
+            <div class="card card4">
                 <img src="img/mic_1.svg" alt="mic">
                 <h4>Audio</h4>
                 <p class="skill__text_card">
@@ -119,7 +119,7 @@
             <h2>Video</h2>
         </div>
         <div class="video-player">
-            <img class="video-main" src="img/video-player.png" alt="video-player">
+            <img class="video-main" src="img/video-player_tablet.png" alt="video-player">
             <img class="video-play" src="img/Play_hover.svg" alt="Play">
 
         </div>
